# mouse_tracking

./: Cargo.toml  LICENSE  README.md  TECHNICAL.md
.github/wokflows/: release.yml
.github/workflows/: release.yml
sql/: aggregate_daily.sql  aggregate_days_summary.sql  aggregate_hourly.sql  delete_aggregated.sql  delete_aggregated_daily.sql  delete_aggregated_hourly.sql  finalize_dangling_old.sql  finalize_dangling_recent.sql  finalize_interval.sql  initialize_db_app_intervals.sql  initialize_db_daily_summary.sql  initialize_db_days_summary_by_app.sql  initialize_db_hourly_summary.sql  insert_interval.sql  query_max_end_time.sql  query_stats_current_hour_agg.sql  query_stats_current_hour_raw.sql  query_stats_intervals_by_app.sql  query_stats_intervals_detailed.sql  query_stats_last_hour.sql  query_stats_today.sql
src/: commands.rs  config.rs  errors.rs  lib.rs  main.rs  persistence.rs  types.rs  utils.rs  windows_api.rs
src/commands/: mod.rs  run.rs  set_key.rs  stats.rs  track.rs  update.rs
src/detection/: mod.rs  windows_detector.rs
