[package]
name = "mouse_tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] } # For serialization
serde_json = "1.0"                               # JSON format
serde_with = { version = "3.4", features = ["std"] } # For Duration serialization
dirs = "5.0"  
clap = { version = "4.5.36", features = ["derive"] } # Check latest version
rusqlite = { version = "0.34", features = ["bundled"] } 
chrono = { version = "0.4.40", features = ["serde"] } 
# Using windows-rs for Windows API calls
# Be specific about the features needed to reduce compile times
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus", # For K32GetModuleFileNameExW
    "Win32_System_LibraryLoader", # Implicit dependency sometimes needed
    "Win32_Graphics_Gdi", # For ScreenToClient if needed, though WindowFromPoint uses screen coords
]}