[package]
name = "mouse_tracking"
version = "0.1.7"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["std"] }
dirs = "5.0"  
clap = { version = "4.5.36", features = ["derive"] } 
rusqlite = { version = "0.34", features = ["bundled"] } 
chrono = { version = "0.4.40", features = ["serde"] } 
thiserror = "2.0.12"
self_update = { version = "0.42.0", features = ["archive-zip", "compression-zip-deflate", "rustls"], default-features = false }
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus", # For K32GetModuleFileNameExW
    "Win32_System_LibraryLoader", # Implicit dependency sometimes needed
    "Win32_Graphics_Gdi", # For ScreenToClient if needed, though WindowFromPoint uses screen coords
]}
cfg-if = "1.0.0"
simple_logger = "5.0.0"
